fixed user state persistance by wrapping the reducers in a RESET_STATE, then called this reset state upon click on the logout button in the LogoutButton Component. Also did some CSS styling changes to the business side, then made hidden buttons that populate the forms with data

--- a/src/components/BusinessInfo/BusinessInfo.css
+++ b/src/components/BusinessInfo/BusinessInfo.css
@@ -46,3 +46,22 @@ p {
     margin-top: 0;
     margin-bottom: 10px; 
 }
+
+.demo-button {
+    position: absolute !important;
+    top: 50px !important;
+    right: 10px !important;
+    background-color: #ffffff !important;
+    color: #f7f7f7 !important; 
+    border: none !important;
+    z-index: 1000 !important;
+    border-radius: 5px !important;
+    padding: 5px 10px !important;
+}
+
+.demo-button:hover {
+    background-color: #cacfd5;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
